--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prettify": "prettier --write .",
+    "eslint": "eslint .",
+    "prettycheck": "prettier --check .",
     "stylelint": "stylelint \"**/*.css\"",
-    "stylelint-check": "stylelint-config-prettier-check"
+    "prepare": "husky install",
+    "typecheck": "tsc",
+    "test": "npm run eslint && npm run stylelint && npm run prettycheck && npm run typecheck"
   },
   "dependencies": {
+    "husky": "^5.1.3",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -23,6 +27,7 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
+    "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
