--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.22.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
+    "storybook-css-modules-preset": "^1.0.6",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
