✨ Add custom server A custom server supports consistent connections with web sockets or databases and allows custom routing. Guides: https://nextjs.org/docs/advanced-features/custom-server https://github.com/vercel/next.js/tree/canary/examples/custom-server-typescript
Steps:

- Add server folder with server/index.ts. This is the server entry point with a custom route for /storybook to allow a deployment of the app and storybook on a single server. All other requests are forwarded to next request handler.

- `npm i -D nodemon ts-node` which is required for the new dev script.

- Add `tsconfig.server.json` for a custom TypeScript config for the server side. The existing tsconfig is extended, but it's required to change the module (More details).

Add nodemon.json to configure nodemon. The server folder is watched.

- Add and update `dev, build-next, build-server, build` and `start` scripts.

`npm run dev` is used in development with hot module replacement.
`npm run build` creates optimized client, storybook and server builds.
`npm start` calls the server build.

Please verify that all scripts are working and try out /storybook route.

Notes:

> A custom server can not be deployed on Vercel, the platform Next.js was made for.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "nodemon",
+    "build": "npm run build-next && npm run build-storybook && npm run build-server",
+    "start": "NODE_ENV=production node build/index.js",
     "eslint": "eslint .",
     "prettycheck": "prettier --check .",
     "stylelint": "stylelint \"**/*.css\"",
@@ -13,7 +13,9 @@
     "typecheck": "tsc",
     "test": "npm run eslint && npm run stylelint && npm run prettycheck && npm run typecheck",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-next": "next build",
+    "build-storybook": "build-storybook",
+    "build-server": "tsc --project tsconfig.server.json"
   },
   "dependencies": {
     "husky": "^5.1.3",
@@ -36,11 +38,13 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
     "lint-staged": "^10.5.4",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "storybook-css-modules-preset": "^1.0.6",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
